--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,9 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+# Ignorar archivos de Prisma (excepto el esquema)
+/prisma/migrations/
+/prisma/*.db
+/prisma/*.db-journal
